# AgentOPS_Assistant

./: .env.template  README.md  app.py  pyproject.toml  src2_app.py  summaries_chatbot.ipynb  transcript.txt  transcript1.txt
backend/: config.py  main.py  utils.py
backend/agent/: __init__.py  edges.py  generate_chain.py  graph.py  nodes.py  vector_store.py
backend/database/: __init__.py  chat_sessions.py  employees.py  messages.py  transcriptions.py  users.py
backend/schemas/: chat.py  transcribe.py
backend/services/: chat.py  transcribe.py
backend/views/: __init__.py  chat.py  transcribe.py
frontend/pages/: chat_page.py  transcribe_page.py
frontend/utils/: auth.py
pipeline/: doc_loader_exp.ipynb  indexer.ipynb
